--- a/codee/my_list.ipynb
+++ b/codee/my_list.ipynb
@@ -55,11 +55,117 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 네모세모오모"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.141592653589793"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "math.pi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'pi : 3.142'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f'pi : {math.pi:.3f}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'pi :      3.142'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f'pi : {math.pi:10.3f}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x: 5 is odd\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 5\n",
+    "if x % 2 == 0:\n",
+    "    s = 'even'\n",
+    "\n",
+    "else:\n",
+    "    s = 'odd'\n",
+    "\n",
+    "print(f'x: {x} is {s}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x: 5 is odd\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 5\n",
+    "s = 'even' if x % 2 == 0 else 'odd'\n",
+    "\n",
+    "print(f'x: {x} is {s}')"
+   ]
   }
  ],
  "metadata": {
